Inclusion de startup para proyecto

--- a/InfintyHibotPlt.csproj
+++ b/InfintyHibotPlt.csproj
@@ -17,6 +17,7 @@
     <Folder Include="Datos\Infinity\Items\" />
     <Folder Include="Datos\Infinity\Comments\" />
     <Folder Include="Datos\Infinity\Attachaments\" />
+    <Folder Include="Datos\Data\" />
   </ItemGroup>
 
 </Project>
