Configuracion y orden de entity

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ALBERTO-PC\\PALANTIR2017; Database=PoolConversation; User=sa; Password=QsoftMSDEsa2005;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
