--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=pltbasedatos.database.windows.net; Database=hibotinfinity-database; User=soporte; Password=QsoftMSDEsa2005;"
+
+  //},
   "ConnectionStrings": {
     "DefaultConnection": "Server=ALBERTO-PC\\PALANTIR2017; Database=PoolConversation; User=sa; Password=QsoftMSDEsa2005;"
 
