--- a/InfintyHibotPlt.csproj
+++ b/InfintyHibotPlt.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Datos\Infinity\Attachaments\" />
+    <Folder Include="Download\" />
   </ItemGroup>
 
 </Project>
