Mejora para agregar mas items al item en infinity

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -25,7 +25,10 @@
     "AssignedPor": "0c3cceba-492e-47c0-b6f0-52f323014653",
     "NumWA": "d51f3298-0350-4e2f-9a53-0105f7e7cf04",
     "Origen": "9dbf05e6-85f4-49ea-80d3-7b7eb9c3d7bc",
-    "OrigenResp": "121e3ce2-965e-4f4b-95bf-283c827d2021"
+    "OrigenResp": "121e3ce2-965e-4f4b-95bf-283c827d2021",
+    "UrlApi": "https://app.startinfinity.com",
+    "TypeSupport": "",
+    "TypeSupportRes": ""
   },
   "Logging": {
     "LogLevel": {
