--- a/appsettings.json
+++ b/appsettings.json
@@ -26,7 +26,9 @@
     "NumWA": "d51f3298-0350-4e2f-9a53-0105f7e7cf04",
     "Origen": "9dbf05e6-85f4-49ea-80d3-7b7eb9c3d7bc",
     "OrigenResp": "121e3ce2-965e-4f4b-95bf-283c827d2021",
-    "UrlApi": "https://app.startinfinity.com"
+    "UrlApi": "https://app.startinfinity.com",
+    "TypeSupport": "",
+    "TypeSupportRes": ""
   },
   "Logging": {
     "LogLevel": {
