--- a/appsettings.json
+++ b/appsettings.json
@@ -27,8 +27,8 @@
     "Origen": "9dbf05e6-85f4-49ea-80d3-7b7eb9c3d7bc",
     "OrigenResp": "121e3ce2-965e-4f4b-95bf-283c827d2021",
     "UrlApi": "https://app.startinfinity.com",
-    "TypeSupport": "",
-    "TypeSupportRes": ""
+    "TypeSupport": "9e949de9-72e5-4f58-888b-e1de92706b48",
+    "TypeSupportRes": "ed8e6609-0a80-4b99-9813-e7858469f865"
   },
   "Logging": {
     "LogLevel": {
