Mejora en el creacion de items

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -28,7 +28,14 @@
     "OrigenResp": "121e3ce2-965e-4f4b-95bf-283c827d2021",
     "UrlApi": "https://app.startinfinity.com",
     "TypeSupport": "9e949de9-72e5-4f58-888b-e1de92706b48",
-    "TypeSupportRes": "ed8e6609-0a80-4b99-9813-e7858469f865"
+    "TypeSupportRes": "ed8e6609-0a80-4b99-9813-e7858469f865",
+    "HibotStatus": "812adcf2-be7c-4305-9515-cb7c7f60afe5",
+    "HibotStatusInactividad": "ad97a077-1979-46d6-95f3-af3de46e30c4",
+    "HibotStatusTerminado": "d03926e2-d2a9-4065-b458-1a1652642096",
+    "HibotStatusPendiente": "1ab69419-207d-4b64-8ac7-34217b8ee516",
+    "HibotStatusAdministrativa": "fa31b7ed-5381-46b9-85cf-f3b89493b77f",
+    "HibotStatusVentas": "b85c3d58-7037-4c17-9eec-71422c1d7383",
+    "HibotStatusProgramacion": "ed501e03-3fcf-4f78-bf21-3e262d6d2ca9"
   },
   "Logging": {
     "LogLevel": {
