--- a/appsettings.json
+++ b/appsettings.json
@@ -35,7 +35,9 @@
     "HibotStatusPendiente": "1ab69419-207d-4b64-8ac7-34217b8ee516",
     "HibotStatusAdministrativa": "fa31b7ed-5381-46b9-85cf-f3b89493b77f",
     "HibotStatusVentas": "b85c3d58-7037-4c17-9eec-71422c1d7383",
-    "HibotStatusProgramacion": "ed501e03-3fcf-4f78-bf21-3e262d6d2ca9"
+    "HibotStatusProgramacion": "ed501e03-3fcf-4f78-bf21-3e262d6d2ca9",
+    "Clinica": "f762b1df-f46d-48e5-b1af-8f1789144db1"
+
   },
   "Logging": {
     "LogLevel": {
