--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=pltbasedatos.database.windows.net; Database=hibotinfinity-database; User=soporte; Password=QsoftMSDEsa2005;"
-
-  },
   //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=ALBERTO-PC\\PALANTIR2017; Database=PoolConversation; User=sa; Password=QsoftMSDEsa2005;"
+  //  "DefaultConnection": "Server=pltbasedatos.database.windows.net; Database=hibotinfinity-database; User=soporte; Password=QsoftMSDEsa2005;"
 
   //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ALBERTO-PC\\PALANTIR2017; Database=PoolConversation; User=sa; Password=QsoftMSDEsa2005;"
+
+  },
   "Infinity": {
     "WorkSpace": "40362",
     "Board": "u1xuVApewUA",
@@ -18,8 +18,8 @@
     "Agente1Nom": "Alberto",
     "Agente2": "296370",
     "Agente2Nom": "Vanessa",
-    "Agente3": "325792",
-    "Agente3Nom": "Soporte",
+    "Agente3": "329358",
+    "Agente3Nom": "Daniel",
     "Name": "5d64b919-d7fb-42da-81af-46a67a4036a5",
     "Estado": "",
     "AssignedPor": "0c3cceba-492e-47c0-b6f0-52f323014653",
@@ -36,7 +36,21 @@
     "HibotStatusAdministrativa": "fa31b7ed-5381-46b9-85cf-f3b89493b77f",
     "HibotStatusVentas": "b85c3d58-7037-4c17-9eec-71422c1d7383",
     "HibotStatusProgramacion": "ed501e03-3fcf-4f78-bf21-3e262d6d2ca9",
-    "Clinica": "f762b1df-f46d-48e5-b1af-8f1789144db1"
+    "Clinica": "f762b1df-f46d-48e5-b1af-8f1789144db1",
+    "Agentes": [
+      {
+        "Nombre": "Alberto",
+        "Codigo": "74097"
+      },
+      {
+        "Nombre": "Vanessa",
+        "Codigo": "296370"
+      },
+      {
+        "Nombre": "Daniel",
+        "Codigo": "329358"
+      }
+    ]
 
   },
   "Logging": {
